tests/NormalTests/paczka1/small_fuzzy/65385944.err
Error in line 3: bLkohFCBB7H A831 8,3
Error in line 4: bLkohFCBB7H S130 14,6
Error in line 5: bLkohFCBB7H A831 48,9
